Fixing tags tooltips overflow and adding capitalization on tags.

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -406,11 +406,11 @@ body {
     transition: all .3s ease;
 }
 [data-type="tooltip"]:before {
-    color: var(--logo-blue-color);
-    content: attr(data-tooltip);
     padding: 8px;
     bottom: 100%;
-    white-space: nowrap;
+    content: attr(data-tooltip);
+    color: var(--logo-blue-color);
+    text-transform: capitalize;
     background-color: var(--background-sub-color);
     border-radius: 5px;
     box-shadow: var(--box-shadow);
